{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 25,
  "lineage": "731e2d29-73f4-7472-c64e-96053b9a5651",
  "resources": [
    {
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "development",
            "metadata": [
              {
                "generation": 0,
                "name": "development",
                "resource_version": "3094249026",
                "uid": "60cd2f6b-b0ae-4e9d-b24f-b3e76b1892d0"
              }
            ]
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Namespace",
            "name": "development"
          }
        }
      ]
    },
    {
      "module": "module.complex",
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "app",
      "provider": "module.complex.provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "development/complex-ingress",
            "metadata": [
              {
                "annotations": {},
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "complex-ingress",
                "namespace": "development",
                "resource_version": "3166552763",
                "uid": "73774dae-35c3-48d2-ba45-50eb533016ea"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "nginx",
                "rule": [
                  {
                    "host": "complexdev.tomakdigitalagency.ir",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "complex",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 80
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/",
                            "path_type": "Prefix"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "",
                        "ip": "10.103.253.157"
                      }
                    ]
                  }
                ]
              }
            ],
            "timeouts": null,
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 1,
          "identity": {
            "api_version": "networking.k8s.io/v1",
            "kind": "Ingress",
            "name": "complex-ingress",
            "namespace": "development"
          }
        }
      ]
    },
    {
      "module": "module.complex",
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "app",
      "provider": "module.complex.provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "development/complex",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app": "complex"
                },
                "name": "complex",
                "namespace": "development",
                "resource_version": "3166782687",
                "uid": "d3c7d673-63eb-49bd-86c0-edbab0225e25"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.109.162.25",
                "cluster_ips": [
                  "10.109.162.25"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "http",
                    "node_port": 0,
                    "port": 80,
                    "protocol": "TCP",
                    "target_port": "3000"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "complex"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ]
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Service",
            "name": "complex",
            "namespace": "development"
          }
        }
      ]
    },
    {
      "module": "module.dashboard",
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "app",
      "provider": "module.dashboard.provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "development/dashboard-ingress",
            "metadata": [
              {
                "annotations": {},
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "dashboard-ingress",
                "namespace": "development",
                "resource_version": "3166784395",
                "uid": "1ce775c5-4ad8-4bcc-bd53-1236a594b7b1"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "nginx",
                "rule": [
                  {
                    "host": "dashboarddev.tomakdigitalagency.ir",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "dashboard",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 80
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/",
                            "path_type": "Prefix"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "",
                        "ip": "10.103.253.157"
                      }
                    ]
                  }
                ]
              }
            ],
            "timeouts": null,
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 1,
          "identity": {
            "api_version": "networking.k8s.io/v1",
            "kind": "Ingress",
            "name": "dashboard-ingress",
            "namespace": "development"
          }
        }
      ]
    },
    {
      "module": "module.dashboard",
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "app",
      "provider": "module.dashboard.provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "development/dashboard",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app": "dashboard"
                },
                "name": "dashboard",
                "namespace": "development",
                "resource_version": "3166782695",
                "uid": "e603e6f8-ffaf-45ea-b2b5-9a40ca75cae1"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.108.98.99",
                "cluster_ips": [
                  "10.108.98.99"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "http",
                    "node_port": 0,
                    "port": 80,
                    "protocol": "TCP",
                    "target_port": "3000"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "dashboard"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ]
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Service",
            "name": "dashboard",
            "namespace": "development"
          }
        }
      ]
    },
    {
      "module": "module.landing",
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "app",
      "provider": "module.landing.provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "development/landing-ingress",
            "metadata": [
              {
                "annotations": {},
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "landing-ingress",
                "namespace": "development",
                "resource_version": "3166552765",
                "uid": "a19ff95b-2261-4435-8850-174a8c4e33f4"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "nginx",
                "rule": [
                  {
                    "host": "dev.tomakdigitalagency.ir",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "landing",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 80
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/",
                            "path_type": "Prefix"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "",
                        "ip": "10.103.253.157"
                      }
                    ]
                  }
                ]
              }
            ],
            "timeouts": null,
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 1,
          "identity": {
            "api_version": "networking.k8s.io/v1",
            "kind": "Ingress",
            "name": "landing-ingress",
            "namespace": "development"
          }
        }
      ]
    },
    {
      "module": "module.landing",
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "app",
      "provider": "module.landing.provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "development/landing",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app": "landing"
                },
                "name": "landing",
                "namespace": "development",
                "resource_version": "3166782698",
                "uid": "66f7cd20-4bcd-4d1c-ace2-5fec3aaa7a8a"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.102.13.198",
                "cluster_ips": [
                  "10.102.13.198"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "http",
                    "node_port": 0,
                    "port": 80,
                    "protocol": "TCP",
                    "target_port": "3000"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "landing"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ]
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Service",
            "name": "landing",
            "namespace": "development"
          }
        }
      ]
    },
    {
      "module": "module.userwebsite",
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "app",
      "provider": "module.userwebsite.provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": []
    },
    {
      "module": "module.userwebsite",
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "app",
      "provider": "module.userwebsite.provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "development/userwebsite",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app": "userwebsite"
                },
                "name": "userwebsite",
                "namespace": "development",
                "resource_version": "3166846895",
                "uid": "e064fe7a-45f7-446e-a9d5-3fd8b0b12702"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.103.213.188",
                "cluster_ips": [
                  "10.103.213.188"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "http",
                    "node_port": 0,
                    "port": 80,
                    "protocol": "TCP",
                    "target_port": "3000"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "userwebsite"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ]
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Service",
            "name": "userwebsite",
            "namespace": "development"
          }
        }
      ]
    }
  ]
}